--- a/portfolio-photo/index.html
+++ b/portfolio-photo/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+
+<style>
+  /* 
+  Style: 
+    - chose a general color style for the whole app 
+    (mabe a B/W style, or a more colored one)
+    - Chose a fontstyle for menue and paragraphs
+    - chose the frameworck Bulma VS Tailwind css 
+    (i've all ready used Bulma but ther is somme limitations 
+    and it needs to create our propore css classes for specific uses, 
+    but I am still in refelxion if it is a comercial plus 
+    or a production weakness.)
+  
+  */
+</style>
+
 </html>
