--- a/portfolio-photo/index.html
+++ b/portfolio-photo/index.html
@@ -8,7 +8,7 @@
     <!--\assets\srcTW\styles.css -->
     <title>Photo protpholio</title>
   </head>
-  <body >
+  <body class="font-thin no-underline bg-blue-100 ">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
